k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  go-web-app-deployment
  namespace: default
  labels:
    app:  go-web-app-deployment
spec:
  selector:
    matchLabels:
      app: go-web-app-deployment
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  go-web-app-deployment
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  go-web-app-deployment
        image:  karthikchary/go-web-app:v1
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  8080
          name:  go-web-app-deployment
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
      restartPolicy: Always
