k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-service
  namespace: default
spec:
  selector:
    app: go-web-app-deployment
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: go-web-app-service
    protocol: TCP
    port: 80
    targetPort: 8080
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort: 30080
